--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -22,7 +22,7 @@
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
       {% if site.show_downloads %}
-        <a href="index.md" class="btn">Main Page</a>
+        <a href="index.html" class="btn">Main Page</a>
         <a href="https://raw.githubusercontent.com/coco33920/ocaml-baguettesharp-interpreter/master/bin/linux/baguette%23.linux64" class="btn">Linux Binaries</a>
         <a href="https://raw.githubusercontent.com/coco33920/ocaml-baguettesharp-interpreter/master/bin/macos/baguette%23.macos64" class="btn">macOS Binaries</a>
       {% endif %}
